# BreathingCube

./: .cproject  .cproject.bak  .gitignore  .mxproject  .project  .project.bak  AttemptV1_LP5812_driver.c  CMakeCache.txt  CMakeLists.txt  README.md  WB Debug.launch  WB.ioc  build.ninja  cmake_install.cmake  compile_commands.json  das  lp5812driver.c  lp5812driver.h  stmMakeFile.code-workspace
Core/Inc/: ICM20948Driver.h  Ws2812bDriver.h  app_conf.h  lp5812driver.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  time_manager.h
Core/Src/: ICM20948Driver.c  Ws2812bDriver.c  lp5812driver.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c  time_manager.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
